--- a/11-25.md
+++ b/11-25.md
@@ -28,18 +28,18 @@ document:{
 
 - 基于 Node 实现的 12 种基本类型：
 
-  1. Node.ELEMENT_NODE
-  2. Node.ATTRIBUTE_NODE
-  3. Node.TEXT_NODE
-  4. Node.CDATA_SECTION_NODE
-  5. Node.ENTITY_PEFERENCE_NODE
-  6. Node.ENTITY_NODE
-  7. Node.PROCESING_INSTRUCTION_NODE
-  8. Node.COMMENT_NODE
-  9. Node.DOCUMENT_NODE
-  10. Node.DOCUMENT_TYPE_NODE
-  11. Node.DOCUMENT_FRAGMENT_NODE
-  12. Node.NOTATION_NODE
+  1. Node.ELEMENT_NODE // 1
+  2. Node.ATTRIBUTE_NODE // 2
+  3. Node.TEXT_NODE // 3
+  4. Node.CDATA_SECTION_NODE // 4
+  5. Node.ENTITY_PEFERENCE_NODE // 5
+  6. Node.ENTITY_NODE // 6
+  7. Node.PROCESING_INSTRUCTION_NODE // 7
+  8. Node.COMMENT_NODE // 8
+  9. Node.DOCUMENT_NODE // 9
+  10. Node.DOCUMENT_TYPE_NODE // 10
+  11. Node.DOCUMENT_FRAGMENT_NODE // 11
+  12. Node.NOTATION_NODE // 12
 
 - 节点属性方法：
 
@@ -81,4 +81,56 @@ document:{
   // 情况1：空文本节点，将节点删除
   // 情况2：连个兄弟节点相邻，合并为一个文本节点
   node.normalize()
+  ```
+
+### Document 类型
+
+- 属性：
+
+  - nodeType:9
+  - nodeName:"#document"
+  - nodeValue:null
+  - parentNode:null
+  - ownerDocument:null
+
+- 子节点类型：
+
+  - DocumentType // html 元素
+  - Element // html 元素外注释
+  - ProcessingInstruction
+  - Comment
+
+- 访问子节点的方式
+
+  - document.documentElement
+  - document.body
+
+- 文档信息
+
+  - document.URL // 网址，只读
+  - document.domain // 域名，可读写
+  - document.referrer // 来源链接，只读
+
+- 获取元素
+
+  ```
+  // 根据id获取
+  document.getElementById('id')
+  // 根据tag获取
+  document.getElementByTagName('img')
+  // 根据classname获取
+  document.getElementByClassName('class')
+  ....
+  ```
+
+- 写入内容：在网页的输出流写入内容
+  ```
+  // 将字符串写入内容
+  document.write('hello')
+  // 将字符串写入内容，可以追加换行符(\n)
+  document.writeIn()
+  // 开启网页输出流
+  document.open()
+  // 关闭网页输出流
+  document.close()
   ```
