feat: 完善通信方式

--- a/12-13.md
+++ b/12-13.md
@@ -157,17 +157,87 @@ mql.addEventListener('change', function () {
 
 - 定义：引入第三者进行中转
   <img src='/images/06.png'/>
+- 缺点：引入服务端
 
 ### 定时器+客户端存储
 
+- 思路：本地存储 + 本地轮询
+- 客户端存储：
+  - cookie
+  - localStorage
+  - indexDB
+  - chrome 的 fileSystem
+- 缺点：
+  - 可能会受到副作用：cookie 增加负担，fileSystem 需要清理
+  - 不够及时
+  - 受限于同源策略
+
 ### postMessage
+
+- 思路：用某种手段建立窗口间的联系，通过 postMessage 进行跨窗口通信
+- 优点：不受同源策略影响
+- 缺点：必须拿到对应窗口的引用
+
+```js
+// 核心代码
+<iframe id='ifr'></iframe>
+window.addEventListener('message', function (event) {
+  console.log(event);
+  ...
+});
+ifr.contentWindow.postMessage('123')
+```
 
 ### storageEvent
 
+- sessioStorage/localStorage
+- 思路：当前页面的 storage 被其它页面修改，触发 storageEvent 事件
+- 缺点：
+  - 传递的数据大小有限制
+  - 可能需要进行清理工作
+  - 受限于同源策略
+  - 同窗口不能监听
+
+```js
+// 核心代码
+window.addEventListener('storage',function(ev){
+console.log(ev);
+...
+})
+```
+
 ### broadcastChannel
+
+- 优点：允许同源的不同浏览器窗口，tab 页，frame 或 iframe 下的不同文档之间相互通信
+- 缺点：受限于同源策略
+
+```js
+// 核心代码
+// page1
+var channel1 = new BroadcastChannel('channel-BroadcastChannel');
+channel1.postMessage('page1-channel');
+// page2
+var channel2 = new BroadcastChannel('channel-BroadcastChannel');
+channel2.addEventListener('message', function (event) {
+  console.log(event);
+});
+```
 
 ### messageChannel
 
 ### sharedWorker
 
+- 优点：不同页面可以共享这个 worker
+- 缺点：兼容性，同源策略
+
 ### 汇总对比
+
+| 方法方式          | 是否需要强关联 | 遵守同源策略 | web worker 可用    |
+| ----------------- | -------------- | ------------ | ------------------ |
+| webSocket         |                |              | √                  |
+| 定时器+客户端存储 |                |              | indexedDB          |
+| postMessage       | √              |              | 自己的 postMessage |
+| storageEvent      |                | √            |
+| broadcastChannel  |                | √            | √                  |
+| messageChannel    | √              |              | √                  |
+| sharedWorker      |                | √            | √                  |
