--- a/12-15.md
+++ b/12-15.md
@@ -342,4 +342,13 @@ function myXHR() {
 
 #### 正向代理
 
-- cli 工具
+- cli 工具（webpack 配置 devServer proxy）
+- 代理软件，本质是拦截请求代理
+
+#### 反向代理
+
+- nginx
+
+#### websocket
+
+- 客户端和服务端之间存在持久的连接，而且双方可以随时开始发送数据
