feat: 新增异步编程理解

--- a/12-20.md
+++ b/12-20.md
@@ -35,6 +35,43 @@ function delay(fn, delay, context) {
 }
 ```
 
+### Promise resolve 以后，再报错无效
+
+```js
+const p2 = new Promise((resolve, reject) => {
+  resolve(5);
+  throw new Error('自定义错误');
+});
+p2.then((res) => {
+  // 不会执行
+  console.log('res1', res);
+})
+  .then((res) => {
+    // 不会执行
+    console.log('res2', res);
+  })
+  .catch((e) => {
+    console.log('reject 错误', e);
+  });
+```
+
+### then 传入非函数，值穿透
+
+```js
+const p2 = new Promise((resolve, reject) => {
+  resolve(5);
+  throw new Error('自定义错误');
+});
+p2.then(1)
+  .then((res) => {
+    console.log('res1', res); // 5
+    return 2;
+  })
+  .catch((e) => {
+    console.log('reject 错误', e);
+  });
+```
+
 ## Generator 函数/生成器函数
 
 ```js
@@ -55,11 +92,121 @@ function delay(fn, delay, context) {
   - prototype.return()：给定的值并结束生成器
   - prototype.throw()：抛出异常
 
-补充
+### 动态构建 Generator 函数实例
+
+```js
+const GeneratorFunction = Object.getPrototype(function* () {}).constructor;
+const numGenerator = new GeneratorFunction(`
+  yield 1;
+  yield 2;
+  yield 3;
+`);
+```
+
+### 判断 Generator 函数
+
+```js
+const GeneratorFunction = Object.getPrototype(function* () {}).constructor;
+function* numGenerator() {
+  yield 1;
+  yield 2;
+  yield 3;
+}
+console.log(GeneratorFunction.constructor === GeneratorFunction);
+```
+
+```js
+function* generator() {
+  var val = 1;
+  while (true) {
+    yield val++;
+  }
+}
+const gen = generator();
+gen.next(); // {value:1,done:false}
+gen.throw(new Error('sthnis wrong')); // 'Error Caught!'  {value:2,donw:false}
+gen.next(); // {value:3,done:false}
+```
+
+### Generator 函数的参数传递
+
+#### 外界向 generator 函数传递参数
+
+- generator 函数本身可以接受初始化参数
+- generator.prototype.next 可以向 generator 函数传递参数
+- generator.prototype.return 可以向 generator 函数传递参数
+- generator.prototype.throw 可以向 generator 函数抛出异常
+
+#### generator 函数向外界输出结果
+
+- generator.prototype.next 的返回值
+
+### generator-序列生成器
+
+```js
+function* sequenceGenerator(
+  start = 0,
+  step = 1,
+  end = Number.MAX_SAFE_INTEGER
+) {
+  let current = start;
+  while (current <= end) {
+    yield current;
+    current = current + step;
+  }
+}
+const gen = sequenceGenerator(0, 3, 6);
+console.log(gen.next());
+console.log(gen.next());
+
+const gen2 = sequenceGenerator(0, 3, 6);
+var numnbers = [...gen2];
+console.log(numnbers);
+
+const gen3 = sequenceGenerator(0, 3, 6);
+for (let v of gen3) {
+  console.log('v:', v);
+}
+```
+
+### generator-状态机
+
+```js
+function* stateMachineGenerator(states, state) {
+  const len = states.length;
+  let index = Math.max(
+    states.findIndex((s) => s === state),
+    0
+  );
+  while (true) {
+    yield states[++index % len];
+  }
+}
+const startState = 'Do';
+const stateMachine = stateMachineGenerator(
+  ['Plan', 'Do', 'Check', 'Action'],
+  startState
+);
+console.log(startState); // Do
+console.log(stateMachine.next().value); // Check
+console.log(stateMachine.next().value); // Action
+console.log(stateMachine.next().value); // Plan
+console.log(stateMachine.next().value); // Do
+console.log(stateMachine.next().value); // Check
+console.log(stateMachine.next().value); // Action
+console.log(stateMachine.next().value); // Plan
+```
 
 ### async 本质
 
+<image src='./images/12.png'>
+- 本质就是对generator的一种封装
+<image src='./images/13.png'>
 补充
+
+#### 注意点
+
+- async 函数里面，不是所有异步代码都需要 await，主要是看业务上是否有依赖关系。不然，有无用的等待
 
 ## 基于 Promise 的通用异步方案
 
@@ -72,4 +219,98 @@ function delay(fn, delay, context) {
 
 ### 一发一收
 
-补充
+#### 初步解决方案
+
+```ts
+const emmiter = new EventEmmiter();
+// 被请求方，模拟server
+// 收到请求
+emmiter.on('message-client-req', ({ type, data }) => {
+  console.log('server:message-client-req', type, data);
+  // 响应请求
+  emmiter.emit('message-client-res', {
+    type,
+    data,
+    from: 'server',
+  });
+});
+// 请求
+function invoke(type: string, data: any = {}) {
+  return new Promise((reolve, _reject) => {
+    console.log('client:发送请求');
+    emitter.once('message-client-res', function (data) {
+      resolve(data);
+    });
+    emitter.emit('message-client-req', { type, data });
+  });
+}
+// 调用
+invoke('ccc', 'req1').then((res) => {
+  console.log('client:req1', res);
+});
+```
+
+- 缺点：如果响应是异步的，那么数据不会更新
+
+#### 进一步解决方案
+
+```ts
+const emmiter = new EventEmmiter();
+// 维护一个响应列表
+const queues: any[] = [];
+function invoke(type: string, data: any = []) {
+  return new Promise((resolve, _reject) => {
+    console.log('client:发送请求');
+    queues.push({ type, resolve });
+  });
+  emitter.emit('message-client-req', { type, data });
+}
+// 统一做响应处理。通过typr查找对应的响应函数
+emitter.on('message-client-req', function (data: any) {
+  // 去列表里面查找对应的回调
+  const index = queues.findIndex((c) => c.type === data.type);
+  console.log('index:', index);
+  if (index > 0) {
+    const qItem = queues[index];
+    // 执行回调
+    qItem.resolve(data);
+    // 删除
+    qItem.splice(index, 1);
+  }
+});
+```
+
+- 缺点：同 type 的多个请求，后发先回导致数据报错
+
+#### 最终解决方案
+
+```ts
+const emmiter = new EventEmmiter();
+const queues: any[] = [];
+function invoke(type: string, data: any = []) {
+  return new Promise((resolve, _reject) => {
+    console.log('client:发送请求');
+    // 如果有key就使用，不然自己生成一个
+    const key = data.key || `${Math.random() - Math.random()}`;
+    queues.push({ type, resolve });
+  });
+  // 响应时，返回请求的key
+  emitter.emit('message-client-req', { type, data, key });
+}
+emitter.on('message-client-req', function (data: any) {
+  const index = queues.findIndex((c) => {
+    // 请求方收到响应用key比较
+    return c.type === data.type && c.key === data.key;
+  });
+  console.log('index:', index);
+  if (index > 0) {
+    const qItem = queues[index];
+    qItem.resolve(data);
+    qItem.splice(index, 1);
+  }
+});
+```
+
+## 通用设计
+
+<image src='/images/14.png' />
