--- a/12-30.md
+++ b/12-30.md
@@ -1,4 +1,4 @@
-# 计时器
+# 动画
 
 ## setInterval
 
@@ -39,3 +39,44 @@
 - 由于是在 render 之后，尽量避免在回调中改变 DOM
 - 避免运行时间无法预测的任务
 - 在需要的时候使用 timeout（timeout 会改变执行时机）
+
+## CSS 动画实现
+
+### 实现方式
+
+- animations：指定一组或者多组动画，每组之间用逗号隔开
+- transition：指定一个或者多个 css 属性过度效果，多个属性用逗号隔开
+
+### 内置贝塞尔函数运动效果
+
+- linear：匀速
+- ease：缓慢开始，突然加速，变慢
+- ease-in：缓慢开始，逐渐加速直到结束
+- ease-out：突然开始，逐渐减速到结束
+- ease-in-out：缓慢加速，然后加速，最后减速至结束
+- 自定义
+
+### 技巧
+
+- 动画暂停与启动：animation-play-state
+- webkit-动画事件监听：webkit-animationEnd，webkitAnimationStart
+
+### transition 事件
+
+- transitioncancel：过渡取消事件
+- transitionend：过度结束事件
+- transitionrun：过度进行事件
+- transitionstart：过度开始事件
+
+### 注意事项
+
+- css 动画可以开启 GPU 加速，js 动画同样可以设置 translate3d()或者 matrix3d()来开启 GPU 加速
+- GPU 有图像存储限制，一旦 GPU 的存储空间用完，速度就会急剧下降
+- 不是所有 css 属性都能获得 GPU 加速
+- GPU 加速也有自己的开销，可以由 CSS 属性 will-change 来解决
+- 大多数 css 属性都会引起布局更改和重新绘制，因此尽可能考虑使用 opacity 和 css transforms
+
+## 选择
+
+- 两个状态之间简单切换，选择 css 动画
+- 复杂动画使用 js 动画，可控性更好
