--- a/01-04.md
+++ b/01-04.md
@@ -44,3 +44,113 @@ console.log(m.name); // 'jack'
 ```
 
 ### 方法装饰器
+
+- 参数：
+  - target：目标对象
+  - propertyKey：属性名
+  - descriptor：属性描述符
+
+```js
+// 一层层进行包装
+function methodDecorator(name = 'mike') {
+  return function (target, key, descriptor) {
+    const originalMethod = descriptor.value;
+    descriptor.value = function (...args) {
+      console.log('当前参数', args[1]);
+      args[1] = 'jack';
+      return originalMethod.apply(this, args);
+    };
+    return descriptor;
+  };
+}
+```
+
+### 访问器装饰器
+
+- 参数：与方法装饰器参数一致
+
+```js
+function changeName(oriName = 'jack') {
+  return function (target, propertyKey, descriptor) {
+    const oriSet = descriptor.set;
+    descriptor.set = function (name) {
+      if (oriName !== name) {
+        return;
+      }
+      oriSet.call(this, name);
+    };
+  };
+}
+```
+
+### 属性装饰器
+
+- 参数：与方法装饰器参数一致
+
+```js
+// 无参
+function propertyReadonly(target, propertyName, descriptor) {
+  descripto.writable = false;
+}
+class Man {
+  @propertyReadonly name = 'jack';
+  getName() {
+    return this.name;
+  }
+}
+// 有参
+function checkType(type) {
+  return function (target, propertyName, descriptor) {
+    let value = descriptor.initializer && descriptor.call(this);
+    return {
+      enumerable: true,
+      configuable: true,
+      get: function () {
+        return value;
+      },
+      set: function (c) {
+        if (typeof c === type) {
+          value = c;
+        }
+      },
+    };
+  };
+}
+class Man {
+  @checkType('string');
+  name='jack'
+  getName(){
+    return this.name
+  }
+  setName(name){
+    this.name=name
+  }
+}
+```
+
+### 装饰器加载顺序
+
+- 总体表达求值顺序：类装饰器>属性装饰器，方法装饰器
+- 求值结果：属性装饰器，方法装饰器>类装饰器
+- 属性和方法装饰器，谁在前面就先执行谁
+- 表达式：从上到下执行
+- 求值结果：从下到上执行
+
+### 注意
+
+- 只能用于装饰类和类方法，不能用于装饰普通函数
+- 装饰器可以修改类与类方法，装饰器模式的原则是不影响原有功能
+
+### 装饰器模式
+
+- 定义：给对象动态增加职责，并不真正改变对象自身
+- 适用背景
+  - 需要一个扩展类的功能，或者给一个类增加职责
+  - 需要动态的给一个类增加功能，这些功能可以动态的撤销
+  - 需要增加一些基本功能的排列组合而产生的非常大量的功能
+- 适用场景
+  - 异常处理
+  - 日志记录
+  - 与工厂模式或者装饰器模式结合
+  - 节流，防抖等装饰器
+  - ...
