--- a/01-04.md
+++ b/01-04.md
@@ -154,3 +154,46 @@ class Man {
   - 与工厂模式或者装饰器模式结合
   - 节流，防抖等装饰器
   - ...
+
+## 基于装饰器的捕获异常
+
+### 基础版
+
+```js
+function methodCatch(params){
+  return function (target, propertyKey, descriptor) {
+  // 处理异常
+  ......
+  return descriptor
+  }
+}
+class DemoClass{
+
+  @methodCatch({message:"创建订单失败",toast:true,report:true,log:true})
+  async createOrder(){
+    const data={...};
+    const res=await createOrder().catch(error=>{
+      ......
+  });
+
+}
+}
+```
+
+## proxy 和代理模式
+
+### Proxy 对象
+
+- 作用：创建一个对象的代理，从而实现基本操作的拦截和自定义（如属性查找，赋值，枚举、函数调用）
+- 语法：const p=new Proxy(target,handler)
+- target：要使用 Proxy 包装的对象（可以是任何类型的对象，包括原生数组，函数，甚至另一个代理）
+- handler：一个对象，各个属性中的函数分别定义了再执行各种操作的代理 p 的行为。每个属性，代表这一种可以代办的事项
+
+#### proxy 的捕获器
+
+- getPrototypeOf：获取原型
+- setPrototypeOf：设置原型
+- isExtensible：同 Object.isExtenisable，是否可拓展
+- preventExtenisable：同 Object.preventExtenisable，禁止可拓展
+- getOwnPropertyDescriptor：获取属性描述符
+- defineProperty：获取属性定义
