--- a/01-04.md
+++ b/01-04.md
@@ -192,8 +192,38 @@ class DemoClass{
 #### proxy 的捕获器
 
 - getPrototypeOf：获取原型
+  - 语法：getPrototypeOf(target) // target：目标对象
 - setPrototypeOf：设置原型
+  - 语法：setPrototypeOf(target,newProto) // target：目标对象，newProto：新的原型
 - isExtensible：同 Object.isExtenisable，是否可拓展
 - preventExtenisable：同 Object.preventExtenisable，禁止可拓展
 - getOwnPropertyDescriptor：获取属性描述符
 - defineProperty：获取属性定义
+- has：判断是否存在
+- get：获取属性
+- set：属性设置
+- deleteProperty：删除属性
+- ownKeys：获取键
+- apply：函数调用
+  - 语法：apply(target,thisArg,atgumentsList)
+- constructor：获取后遭函数
+  - 语法：constructor(target,argumentList,newTarget) // target：目标对象 argumentList：参数列表 newTarget：新的目标对象
+
+### 注意点
+
+- 捕获器函数里面的 this 是 new Proxy 的第二个参数对象 handler
+- Proxy 的实例，数据类型与被代理的数据类型一致
+
+### 可取消的代理
+
+- 用法：Proxy.revocable(target,handler)
+- 返回值：{"proxy":proxy,"revoke",revoke}
+- proxy：和用一般方式 new Proxy(target,handler)创建的代理对象没什么不同
+- revoke：撤销掉和它一起生成的那个代理对象
+
+### 代理模式
+
+- 定义：当不方便访问一个对象，提供另外一个对象来控制这个对象的访问。代理对象对请求做出一些处理之后，再请求转交给被代理对象
+- 适用场景：
+  - 缓存数据
+  - 数据校验
