--- a/01-08.md
+++ b/01-08.md
@@ -28,3 +28,128 @@
 ## call.call.call
 
 ## 3-6-8 代码实现订阅发布中心
+
+- EventTarget.addEventListener()
+- EventTarget.removeEventListener()
+- EventTarget.dispatchEvent()
+
+## window.window
+
+## Object.prototype.toString()
+
+```js
+typeof Boolean.prototype; // 'object'
+Object.prototype.toString.call(Boolean.prototype); // '[object Boolean]'
+```
+
+## 分组运算符和逗号运算符
+
+- 分组运算符：无求值行为
+- 逗号运算符：有求值行为
+- ```js
+  let name = 'letname';
+  const person = {
+    name: 'personName',
+    getName() {
+      return this.name;
+    },
+  };
+  const print = console.log;
+  const getName = person.name;
+  print(getName());
+  print(person.getName());
+  print(\(person.getName\)());
+  ```
+
+## 其他
+
+- fetch 支持进度
+- cors，简单请求和复杂请求
+- async 的本质是 generator 语法糖
+- 模拟点击事件和用户事件，事件监听函数的执行顺序是不一致的
+- cookie 数据以 utf-8 编码存，localStorage 数据以 utf-16 存储
+- 复杂动画可以使用 Web Animation API
+- 五种异常捕获
+- U +D800 到 U +DFFF 区间没有字符是没法打印的
+- DOM 事件监听如何判断是否重复
+- ...
+
+## 实战
+
+### 两个数组高效合并方案
+
+- 正序，倒叙迭代器，数组转对象利用 hash 提升访问
+- 第拿来主义，多级属性访问
+
+### 从 0 到 1 手写一个简易的 Router
+
+- <img src='/images/16.png' />
+
+### 资源加载器的设计与实现
+
+- <img src='/images/17.png' />
+
+### 基于 Promise 的通用异步方案
+
+- <img src='/images/18.png'>
+
+### 计时器面向 next 编程
+
+### 基于 indexedDB 的文件系统
+
+- indexedDB 存储二进制
+- 抽象文件夹和文件
+
+### 基于装饰器优雅的捕获异常
+
+### 事件分析库
+
+- 事件监听可能导致的泄露问题
+
+## 前端
+
+### 泛前端：跨端
+
+- 移动端：react native，flutter，京东的 taro，uni-app 等等
+- 桌面端：electorn，nw.js
+- 小程序
+
+### 大前端
+
+- 广义：解决其他领域问题的前端技术
+- 狭义：涉及后端
+  - express，koa，egg.js，next.js
+  - 微服务
+  - 预渲染
+
+## 前端 roadmap
+
+[知识图谱](https://roadmap.sh/frontend/)
+
+## 流行趋势
+
+### PWA
+
+- 定义：PWA（Progressive Web Apps，渐进式 Web 应用），运用现代的 Web API 以及传统的渐进式增强策略来创建跨平台 Web 应用程序
+
+### 低代码
+
+### 微前端
+
+- 定义：多个前端应用整合在一个应用。每个前端应用单独开发，独立部署，应用间松耦合，应用内高度耦合
+- 应用：single-spa，qiankun
+
+### Web 3D
+
+- 应用场景：
+  - canvas + webgl 让网页 3d 蓬勃发展
+  - 商品展示，活动游戏，大屏数据等
+  - three.js，oasis-engine 移动优先的高性能 Web 图形引擎等
+
+## 学习建议
+
+- 基础是根本
+- 实践是检验真理的唯一标准
+- 空杯心态
+- 坚持就是胜利
+- 拿来主义（学习别人的思想）
