feat: js重难点精选

--- a/11-28.md
+++ b/11-28.md
@@ -113,7 +113,7 @@ arr.map(parseInt); // [1,NaN,NaN]
       - Symbol.ToPrimitive
       - Object.prototype.valueOf // [].valueOf()==[] {}.valueOf=={}
       - Object.prototype.toString // [].toString()=='' {}.toString=='[object Object]'
-  - 若其中一个是字符串，则另一个操作数也准尉字符串，进行拼接。
+  - 若其中一个是字符串，则另一个操作数也转为字符串，进行拼接。
   - 否则，两个操作数都转为数字或者 NaN，进行加法运算。
 - 结果：
   - []+[] == ''
