--- a/01-09.md
+++ b/01-09.md
@@ -27,3 +27,11 @@
   - async 属性：立即请求文件，但不阻塞渲染引擎，wen 文件加载完毕后阻塞渲染引擎并立即执行文件代码
   - defer 属性：立即请求文件，但不阻塞渲染引擎，等到解析完 HTML 之后再执行文件内容
   - type 属性：对应值为'module'，默认阻塞效果同 defer，也可以配合 async 请求完成后立即执行
+- <img src='/images/19.png'/>
+- 注意：
+  - 应该将 script 标签 body 标签底部，这样会先将 body 渲染内容解析出来，再请求 js 文件
+
+## link 标签
+
+- rel 属性
+  - dns-prefetch：浏览器会先对某个域名进行预先 DNS 解析并缓存
