--- a/01-09.md
+++ b/01-09.md
@@ -3,13 +3,16 @@
 ## meta 标签
 
 - 作用：自动刷新/跳转
+
 - ```js
   <meta http-equiv='Refresh' content='5;URL=page2.html'>
   ```
+
 - 应用：
   - 实现 PPT 的自动播放功能，只需要在每个页面的 meta 标签内设置好下一个页面的地址即可
   - 每隔一分钟就需要刷新页面的大屏幕监控，去掉后面的 URL 即可
   - 某些页面缺乏访问权限，在几秒后跳转指定页面
+  - 提取关键信息，方便用户预览搜索到的结果
 - 缺点：
   - 刷新和跳转操作是不可取消的，对于需要刷新时间间隔和手动取消的，推荐使用 js 定时器实现
 
@@ -34,4 +37,16 @@
 ## link 标签
 
 - rel 属性
+
   - dns-prefetch：浏览器会先对某个域名进行预先 DNS 解析并缓存
+    - ```html
+
+    <link rel='dns-prefetch' href='//g.alicon.com' />
+    ```
+  - preconnent：让浏览器在一个http请求正式发给服务端前先执行的一些操作，包括DNS解析，TLS协商，TCP握手，通过消除往返延迟来为用户节省时间
+  - prefetch/preload：
+    - 两者都是让浏览器预先下载并缓存某个资源
+    - 不同的是，prefetch在浏览器忙时会忽略，preload一定会被预先下载
+  - prerender：
+    - 浏览器不仅会加载资源，还会解析执行页面，进行预渲染
+  - <img src='/images/20.png' />
