--- a/02-17.md
+++ b/02-17.md
@@ -40,11 +40,12 @@ function debounce(fn, delay) {
 
 ```js
 function throttle(fn, delay) {
-  let timer;
+  let timer = null;
   return function () {
     let args = arguments;
     if (!timer) {
       timer = setTimeout(() => {
+        timmer = null;
         fn.apply(this, args);
       }, delay);
     }
