--- a/12-30.md
+++ b/12-30.md
@@ -19,7 +19,7 @@
 ## requestAnimationFrame
 
 - 告诉浏览器，执行一个动画，并且在下一次重绘之前执行指定的回调函数更新动画
-- 执行次数与浏览器书信次数匹配，一般 1 秒 60 次
+- 执行次数与浏览器刷新次数匹配，一般 1 秒 60 次
 - 注意
   - 事件循环：1 个宏任务-->所有微任务-->是否需要渲染-->渲染 UI
   - requestAnimationFrame 其实就是在 ui 渲染中执行得
