--- a/02-23.md
+++ b/02-23.md
@@ -30,19 +30,121 @@
 
 ### vue 的数据绑定机制是如何实现的
 
-- 思路：vue 双向数据绑定是通过 数据劫持 结合 发布订阅模式的方式来实现的
 - 核心：Object.defineProperty(obj, prop, descriptor)
+- ```js
+  // 简单实现
+  var obj = {};
+  var val = 'jack';
+  Object.defineProperty(obj, 'val', {
+    get: function () {
+      return val;
+    },
+    set: function (newVal) {
+      val = newVal;
+    },
+  });
+  ```
+
+- 思路：vue 双向数据绑定是通过 数据劫持 结合 发布订阅模式的方式来实现的
+  1. 将 vue 中的 data 中的内容绑定到输入文本框和文本节点中
+  2. 当文本框的内容改变时，vue 实例中的 data 也同时发生改变
+  3. 当 data 中的内容发生改变时，输入框及文本节点的内容也发生变化
+
+#### 第一步：data 绑定输入框与文本内容
+
+使用 DocumentFragment 来劫持子节点，这样可以只回流一次。遍历每个节点，看是对否有 v-model 属性或者{{}}这个符号，如果有且有修改，则替换为 data 中的内容。
+
+#### 第二部：视图中的输入框导致数据模型更改
 
 ```js
-// 简单实现
-var obj = {};
-var val = 'jack';
-Object.defineProperty(obj, 'val', {
-  get: function () {
-    return val;
+// 1. 实现响应式监听属性的函数
+function defineReactive(obj, key, val) {
+  Object.defineProperty(obj, key, {
+    get() {
+      return val;
+    },
+    set(newVal) {
+      if (newVal === val) {
+        return;
+      }
+      val = newVal;
+    },
+  });
+}
+// 2. 实现观察者，对每一个实例属性都监听
+function observe(obj, vm) {
+  for (let key of Object.keys(obj)) {
+    defineReactive(vm, key, obj[key]);
+  }
+}
+// 3. 实现编译函数compile，即视图中的输入框与文本节点与数据绑定
+// 4. Vue的构造函数
+function Vue(options) {
+  this.data = options.data;
+  var data = this.data;
+  observe(data, this);
+  var id = options.id;
+  // 编译HTML：利用碎片文档将多次操作合并为一次，最后一次性添加到里面
+  var dom = nodeToFragment(document.getElementById(id), this);
+  document.getElementById(id).appendChild(id);
+}
+```
+
+#### 第三步：data 数据变动导致输入框和文本节点变动
+
+1. 在 observe（监听数据）中为每个属性添加 dep
+2. 在 nodeToFragment（HTML 编译）中，给每个数据绑定的相关节点生成一个订阅者 watcher，watcher 会将自己添加到 dep 中
+3. 当属性的改变时，就会触发 set 事件，里面触发 dep.notify()也就是 watcher 的 update()方法，从而更新视图
+
+```js
+// 订阅者
+function Watcher(vm, node, name) {
+  Dep.target = this;
+  this.vm = vm;
+  this.name = name;
+  this.update();
+  Dep.target = null; // 全局变量，使用完必须清空，保证唯一性
+}
+Watcher.prototype = {
+  update() {
+    this.get();
+    this.node.nodeValue = this.value;
   },
-  set: function (newVal) {
-    val = newVal;
+  get() {
+    this.value = this.vm[this.name]; // 触发相应的get，get中将相应的watcher加入到对应的dep中
   },
-});
+};
+// defineReactive改写
+function defineReactive(obj, key, val) {
+  var dep = new Dep();
+  Object.defineProperty(obj, key, {
+    get() {
+      if (Dep.target) {
+        dep.addSub(Dep.target);
+      }
+      return val;
+    },
+    set(newVal) {
+      if (newVal === val) {
+        return;
+      }
+      val = newVal;
+      // 通知
+      dep.notify();
+    },
+  });
+}
+function Dep() {
+  this.subs = [];
+}
+Dep.prototype = {
+  addSub() {
+    this.subs.push(sub);
+  },
+  notify() {
+    this.subs.forEach((sub) => {
+      sub.update();
+    });
+  },
+};
 ```
