feat: 修改面试题

--- a/02-12.md
+++ b/02-12.md
@@ -51,6 +51,10 @@
 ### 解释 requestAnimationFrame/requestIdleCallback，分别有什么用？
 
 - requestAnimationFrame：为了实现更流畅和性能更好的动画
+  - 原理：
+    - 会把每一帧中的所有的 DOM 操作集中起来，在一次重绘或者回流中完成，且只跟着系统绘制频率走，这样就保证了回调函数只在每一次的绘制间隔之间执行一次，没有卡顿与丢帧现象。
+    - 页面没激活，就不会执行
+    - 在隐藏或者不可见的元素中，不会执行。
 - requestIdleCallback：为了在渲染空闲时间执行优先级不高的操作，以避免阻塞渲染。
 
 ### 谈下事件循环机制
