--- a/02-19.md
+++ b/02-19.md
@@ -55,7 +55,7 @@
 
 - 规避措施：
   - 将多次改变样式属性的操作，合成一次操作
-  - 将需要多次重排的元素脱离文档流
+  - 将需要多次重排的元素脱离文档流（浮动，绝对定位，fixed）
   - 内存中多次操作节点，再添加到文档中去，fragment 标签
   - 在需要经常获取那些引起浏览器重排的属性值时，要缓存到变量
 
