--- a/前端面试/记录/03-13.md
+++ b/前端面试/记录/03-13.md
@@ -1,38 +1,39 @@
 // 张瑜凡
 
-1.  路由钩子的理解（比较熟悉）
-2.  动态路由（比较熟悉）
-3.  route 和 router 的区别（比较熟悉）
-4.  双向数据绑定改变的原理（比较熟悉）
-5.  对象数据改变（比较熟悉）
-6.  怎么重复使用 mutation
-7.  为什么 mutation 不能使用异步操作（不熟悉）
-8.  Vuex 和单独全局对象有何区别（不熟悉）
-9.  虚拟 DOM 的理解（比较熟悉）
-10. key 的好处（比较所熟悉）
-11. http2 的优化（比较熟悉）
-12. websocket 的理解（不太熟悉）
-13. 四次挥手（不太熟悉）
-14. tcp 和 udp 传输（不太熟悉）
-15. dom 操作的几个常用 api（比较熟悉）
-16. map 和 weakmap 的区别（比较熟悉）
-17.
+1.  XSS 和 XSRF 的理解（比较熟悉）
+2.  webpack 的理解（不熟悉）
+3.  vue 中 js 库（不太熟悉）
+4.  原型链的理解（比较熟悉）
+5.  setTimeout(1)和 setTimeout(2)之间的区别（不知道）
+6.  computed 和 watch 的区别（比较熟悉）
+7.  垃圾回收的理解（比较熟悉）
+8.  this 的指向（比较熟悉）
+9.  强制缓存与协商缓存的理解（比较熟悉）
+10. 常用状态（401：客户端身份没认证，403:服务器禁止访问，400：请求语法错误）
+11. 解决冲突（git rebase git merge）
+12. promise.all 和 promise.allsettled（比较熟悉）
+13. symbol（不太熟悉）
+14. 数组降维（不太熟悉）
+15. 手写 promise 和深拷贝
+16. flex:1 的理解（比较熟悉）
+17. http2 的理解（比较熟悉）
+18. html5（websocket，web storage，不太熟悉）
+19. 元素垂直水平居中（不太熟悉）
+20. 元素选择器的优先级（有点不太熟）
+21.
 
 // 王子云
 
-1.  Vue 的双向绑定的原理（需要梳理）
-2.  v-model 怎么实现的（比较熟悉）
-3.  $nextTicket 的原理（比较熟悉）
-4.  vue 生命周期（比较熟悉）
-5.  keep-alive（比较熟悉）
-6.  组件通信（比较熟悉）
-7.  路由 hash 和 history 区别（比较熟悉）
-8.  动态路由（比较熟悉）
-9.  路由钩子（比较熟悉）
-10. 路由钩子触发（不太熟悉）
-11. vuex 的属性（比较熟悉）
-12. vue2 的 defineProperty 和 vue3 的 proxy 区别（比较熟悉）
-13. map 和 weakmap 的区别（不太熟悉）
-14. 虚拟 DOM 的理解（不太熟悉）
-15. key 的作用（比较熟悉）
-16. new 和 instanceof 手写题
+1. this 指向（比较熟悉）
+2. 闭包得理解（比较熟悉）
+3. 浏览器垃圾回收机制得理解（不太熟悉）
+4. 作用域得理解（比较熟悉）
+5. 箭头函数与普通函数区别（比较熟悉）
+6. for in 和 for of 区别（比较熟悉）
+7. 事件循环的理解（比较熟悉）
+8. $nextTicket（比较熟悉）
+9. 事件冒泡，事件捕获，事件代理（事件代理的适用场景不太熟悉）、
+10. 强制缓存和协商缓存（比较熟悉）
+11. 进程与线程的区别（不太熟悉）
+12. 输入网址按回车的理解（dns 解析不太熟悉，三次握手，四次握手再看看）
+13. 防抖节流手写
