feat: 优化时间切片与大文件上传

--- a/前端面试/记录/03-13.md
+++ b/前端面试/记录/03-13.md
@@ -1,39 +1,16 @@
 // 张瑜凡
 
-1.  XSS 和 XSRF 的理解（比较熟悉）
-2.  webpack 的理解（不熟悉）
-3.  vue 中 js 库（不太熟悉）
-4.  原型链的理解（比较熟悉）
-5.  setTimeout(1)和 setTimeout(2)之间的区别（不知道）
-6.  computed 和 watch 的区别（比较熟悉）
-7.  垃圾回收的理解（比较熟悉）
-8.  this 的指向（比较熟悉）
-9.  强制缓存与协商缓存的理解（比较熟悉）
-10. 常用状态（401：客户端身份没认证，403:服务器禁止访问，400：请求语法错误）
-11. 解决冲突（git rebase git merge）
-12. promise.all 和 promise.allsettled（比较熟悉）
-13. symbol（不太熟悉）
-14. 数组降维（不太熟悉）
-15. 手写 promise 和深拷贝
-16. flex:1 的理解（比较熟悉）
-17. http2 的理解（比较熟悉）
-18. html5（websocket，web storage，不太熟悉）
-19. 元素垂直水平居中（不太熟悉）
-20. 元素选择器的优先级（有点不太熟）
-21.
-
-// 王子云
-
-1. this 指向（比较熟悉）
-2. 闭包得理解（比较熟悉）
-3. 浏览器垃圾回收机制得理解（不太熟悉）
-4. 作用域得理解（比较熟悉）
-5. 箭头函数与普通函数区别（比较熟悉）
-6. for in 和 for of 区别（比较熟悉）
-7. 事件循环的理解（比较熟悉）
-8. $nextTicket（比较熟悉）
-9. 事件冒泡，事件捕获，事件代理（事件代理的适用场景不太熟悉）、
-10. 强制缓存和协商缓存（比较熟悉）
-11. 进程与线程的区别（不太熟悉）
-12. 输入网址按回车的理解（dns 解析不太熟悉，三次握手，四次握手再看看）
-13. 防抖节流手写
+1. websocket 的理解（特点，使用方法，不熟悉）
+2. 网址输入后发生了什么？（比较熟悉）
+3. http 和 https 的区别（不太熟悉）
+4. dns 解析之前会干啥（比较熟悉）
+5. http3.0 的理解（不知道）
+6. 浏览器请求缓存的字段（比较熟悉）
+7. 常见的状态码（比较熟悉）
+8. xss 和 csrf 区别（比较熟悉）
+9. 前端的安全问题（不太熟悉）
+10. eventloop 的理解（比较熟悉）
+11. 同步和异步的理解
+12. $nextTicket 的理解（比较熟悉）
+13. 垃圾回收机制的理解（比较熟悉）
+14. 手写
