--- a/面试记录.md
+++ b/面试记录.md
@@ -4,12 +4,12 @@
 2.  对于三栏布局（圣杯/双飞翼）怎么实现
     答：绝对定位，左右浮动和弹性盒子
 3.  说一下你权限模块怎么实现的
-    答：路由权限：看一下本地缓存有没有 token，没有则跳到登录页，有则将角色信息存到路由 meta 和 vuex 里，然后判断用户角色，根据用户角色增删改路由表，对菜单栏和页面进行动态修改，；部分页面需要根据角色来判断展示内容和按钮开关，使用到了 vue.directive，通过生命周期 inserted 来获取当前按钮的实例，当前路由的 meta 信息，综合判断，对他的属性、样式直接修改
+    答：路由权限：看一下本地缓存有没有 token，没有则跳到登录页，有则将角色信息存到路由 meta 和 vuex 里，然后判断用户角色，根据用户角色增删改路由表，对菜单栏和页面进行动态修改；部分页面需要根据角色来判断展示内容和按钮开关，使用到了 vue.directive，通过生命周期 inserted 来获取当前按钮的实例，当前路由的 meta 信息，综合判断，对他的属性、样式直接修改
 4.  性能优化怎么实现的
     答：
     先是睡了一下 lighthouse 的几个性能指标，再讲总的优化手段：
     1.  html： 降低 dom 层级，减少重绘回流（脱离文档流，display：none，使用 class 属性改写样式），
-    2.  js：采用压缩文件配置，tree-shaking，
+    2.  js：采用压缩文件配置，tree-shaking
     3.  css：压缩文件配置，用 preload 预加载，动画 gpu 加速提升至渲染层，raf，ric
     4.  资源方面：gzip 压缩，dns-prefetch，浏览器的缓存机制，路由懒加载
 5.  客户端奔溃是为什么？
@@ -32,10 +32,41 @@
 7. 说一下 webpack 构建流程（没有深入了解过，有专门的人负责 webpack）
 8. 浏览器缓存机制（同上）
 9. 权限模块实现（同上）
-10. 组件封装怎么实现
-    答：
-    1. 先看一下有没有使用的组件库，没有就自己实现
-    2. 对组件传参、功能，要有备注描述
-    3. 使用插槽来实现将子组件的内容渲染到父组件上
-    4. 使用 mixin 提取通用组件的逻辑
-    5. 使用 extends 扩展原先的组件
+10. 组件封装怎么实现(从 0 对 1)
+    答： 1. 先看一下有没有使用的组件库，没有就自己实现 2. 对组件传参、功能，要有备注描述 3. 使用插槽来实现将子组件的内容渲染到父组件上 4. 使用 mixin 提取通用组件的逻辑 5. 使用 extends 扩展原先的组件
+    规范性和健壮性
+
+03：
+
+1. 讲一下性能优化怎么实现的？
+2. 不能查看别人电脑的性能？只有自己利用 performance 进行自己电脑的
+3. 首屏加载除了资源加载还有别的优化点吗？
+4. 加载图片会导致页面的白屏和重绘？
+5. 静态资源多少大小？
+6. 首次加载资源怎么解决快慢？（拆包，缩小包的体积）
+7. 排查内存泄漏的实现？
+8. 什么样的东西会导致内存泄漏
+9. memory 工具？
+10. 时间分片的具体实现？
+11. 大文件上传？
+12. 面向对象怎么理解？（不知道）
+13. 1G 大图片的拆分（显示 1s 以内不太可能）
+
+04：
+
+1.  安全性问题，http 请求上 get post 是一样的吗？也就是会对 URL 进行加密嘛
+    答：一样的，因为 URL 的信息都是保存在 HTTP Header 中的，而 HTTPS 是会对 HTTP Header + HTTP Body 整个加密的，所以 URL 自然是会被加密的。
+2.  怎么理解 get post 的缓存？
+    答：get 可以缓存，因为获取服务端数据；post 不行，因为用于服务端交互数据
+3.  类型判断（实际代码当中怎么判断？）
+    答：typeof，instanceof，Object.prototype.toString.call()，Array.isArray
+4.  堆栈概念？var name=['jack']（答错了）
+    答：堆：引用数据类型，栈：基本数据类型，name 是放在栈里面的，值的地址指针指向存放再堆里面的['jack']
+5.  JSON.stringify 的局限？（答错了）
+    答：只支持 JSON 的数据类型，但函数支持不了
+6.  怎么判断原型链上的属性？
+    答：Objcet.hasOwnProperty
+7.  怎么实现取出字符串前后空格？
+    答：trim
+8.  宏微任务？正确
+9.  Vue 生命周期，父子组件
