--- a/07-01.md
+++ b/07-01.md
@@ -30,3 +30,72 @@
   - 可维护性好：代码更加模块化和可重用
   - 单文件开发：将组件所有内容放在一个文件里，减少文件数量
   - 高度定制化：支持预处理器，支持 es6 模块化编写，支持 vue 的插值语法等等
+- 原理
+  1. 文件解析：vue 解析器解析 sfc 组件，拆分模板、样式和逻辑
+  2. 模板解析：转换成 render 函数或者虚拟 DOM 结构
+  3. 样式解析：支持预处理器，将 CSS 代码注入页面
+  4. 逻辑解析：对 script 标签中的 js 或者 ts 代码进行住哪换和编译
+  5. 组件生成：将解析后的 css，逻辑，模板生成 vue 组件对象
+  6. 构建打包：被构建打包工具优化，生成最终文件
+
+# 了解初步的组件化思维
+
+## 组件注册
+
+- 分类：全局注册与局部注册
+- 原理：注册之后我们就会在模板里进行声明使用，模板里声明使用的组件最后回被编译返回一个渲染函数 rander。在未来某个时刻执行渲染函数 rander 得到虚拟 DOM(vnode)，再由 vnode 渲染成真实 DOM 进行挂载。
+
+### 全局注册
+
+```js
+import { createApp } from 'vue';
+import App from './App.vue';
+const app = createApp(App);
+
+import Box1 from './Box5.vue';
+app.component(Box1.name, Box1);
+
+app.mount('#app');
+```
+
+### 局部注册
+
+```js
+<script>
+    import Box1 from "./Box1.vue"
+    export defult{
+        components:{
+            Box1
+        },
+        setup(){}
+    }
+</script>
+<template>
+    <Box1></Box1>
+< /template>
+
+```
+
+## 自定义事件
+
+1. 常规父子通信：props 和$emit
+2. 兄弟组件通信
+
+```js
+// child1
+// ...
+mounted(){
+    this.$on('save',this.saveData)
+}
+method：{
+    saveData(data){....}
+}
+// child2
+// ...
+methods:{
+    handleClick(data){
+        const ref=this$parent.$children[1];
+        ref.$emit('save',data)
+    }
+}
+```
